--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "surge": "surge --project ./dist/material-calculator --domain material-calculator.surge.sh"
   },
   "private": true,
   "dependencies": {
