--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,5 +12,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 8
+      - run: npm build
+      - run: cp ./dist/material-calculator/index.html 200.html
       - run: npm install -g surge
-      - run: surge ./ ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
+      - run: surge ./dist/material-calculator ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
